--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 	    			<span class="name">The Master and the Margarita</span>
 	    			<span class="delete">delete</span>
 	    		</li>
-	    	</ul>
+	    	</ul> 
 	    </div>
 	    <form id="add-book">
-			<input type="checkbox"id="hide"/>
-			<label for="hide">Hide all books</label>
+			<!-- <input type="checkbox"id="hide"/>
+			<label for="hide">Hide all books</label> -->
 	    	<input type="text" placeholder="Add a book..." />
 	    	<button>Add</button>
 	    </form>
